# nemoo-icp

./: Cargo.toml  LICENSE  README-ICP.md  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/icp_nemoo_v1_backend/: Cargo.toml
src/icp_nemoo_v1_backend/src/: lib.rs
src/icp_nemoo_v1_frontend/src/: index.html  index.js
src/nemoo_icp_v1_backend/: Cargo.toml  icp_nemoo_v1_backend.did
src/nemoo_icp_v1_frontend/src/: index.html  index.js
