[package]
name = "nemoo_icp_v1_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.8.2"
ic-ledger-types = "0.9.0"
lazy_static = "1.4.0"
marker = "0.9.0"
serde = "1.0.193"
serde_derive = "1.0.193"

